--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:700italic,400,300,700' rel='stylesheet' type='text/css'>
+		<link href="http://fonts.googleapis.com/css?family=Roboto+Condensed:700italic,400,300,700" rel="stylesheet" type="text/css">
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
@@ -32,7 +32,7 @@
 					
 				<!-- Logo -->
 					<div id="logo">
-						<h1><a href="#">Ex Machina</a></h1>
+						<h1><a href="#">GEORGE HORROBIN</a></h1>
 					</div>
 				
 				<!-- Nav -->
@@ -65,9 +65,9 @@
 					<div class="3u">
 						<section>
 							<header>
-								<h2>Feugiat Tempus</h2>
+								<h2>LEGAL ADVICE</h2>
 							</header>
-							<p class="subtitle">In posuere eleifend odio. Quisque semper augue mattis maecenas ligula.</p>
+							<p class="subtitle">SAMPLE text</p>
 							<p><a href="#"><img src="images/pics13.jpg" alt=""></a></p>
 							<a href="#" class="button">More</a>
 						</section>
@@ -75,9 +75,9 @@
 					<div class="3u">
 						<section>
 							<header>
-								<h2>Maecenas lectus</h2>
+								<h2>BUSINESS CARDS</h2>
 							</header>
-							<p class="subtitle">In posuere eleifend odio. Quisque semper augue mattis maecenas ligula.</p>
+							<p class="subtitle">SAMPLE text</p>
 							<p><a href="#"><img src="images/pics14.jpg" alt=""></a></p>
 							<a href="#" class="button">More</a>
 						</section>
@@ -85,19 +85,19 @@
 					<div class="3u">
 						<section>
 							<header>
-								<h2>Luctus lectus</h2>
+								<h2>LOGO DESIGN</h2>
 							</header>
-							<p class="subtitle">In posuere eleifend odio. Quisque semper augue mattis maecenas ligula.</p>
-							<p><a href="#"><img src="images/pics15.jpg" alt=""></a></p>
+						  <p class="subtitle">SAMPLE text</p>
+<p><a href="#"><img src="images/pics15.jpg" alt=""></a></p>
 							<a href="#" class="button">More</a>
 						</section>
 					</div>
 					<div class="3u">
 						<section>
 							<header>
-								<h2>Posuere eleifend</h2>
+								<h2>WEB DEVELOPING</h2>
 							</header>
-							<p class="subtitle">In posuere eleifend odio. Quisque semper augue mattis maecenas ligula.</p>
+							<p class="subtitle">SAMPLE text</p>
 							<p><a href="#"><img src="images/pics16.jpg" alt=""></a></p>
 							<a href="#" class="button">More</a>
 						</section>
@@ -112,19 +112,17 @@
 					<div class="6u">
 						<section>
 							<header>
-								<h2>Integer gravida nibh quis urna</h2>
-								<span class="byline">Augue praesent a lacus at urna congue rutrum</span>
+								<h2>Who are we?</h2>
+								<span class="byline">We build your business</span>
 							</header>
-							<p>This is <strong>Ex Machina</strong>, a responsive HTML5 site template freebie by <a href="http://templated.co">TEMPLATED</a>. Released for free under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so use it for whatever (personal or commercial) &ndash; just give us credit! Check out more of our stuff at <a href="http://templated.co">our site</a> or follow us on <a href="http://twitter.com/templatedco">Twitter</a>.</p>
-							<p>Sed etiam vestibulum velit, euismod lacinia quam nisl id lorem. Quisque erat. Vestibulum pellentesque, justo mollis pretium suscipit, justo nulla blandit libero, in blandit augue justo quis nisl. Fusce mattis viverra elit. Fusce quis tortor. Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget lorem ipsum dolor. Donec placerat odio vel elit. Nullam ante orci, pellentesque eget, tempus quis, ultrices in, est. Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat. Sed etiam vestibulum velit, euismod lacinia quam nisl id lorem. Quisque erat.</p>
-							<p>Sed etiam vestibulum velit, euismod lacinia quam nisl id lorem. Quisque erat. Vestibulum pellentesque, justo mollis pretium suscipit, justo nulla blandit libero, in blandit augue justo quis nisl. Fusce mattis viverra elit. Fusce quis tortor. Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget lorem ipsum dolor. Donec placerat odio vel elit. Nullam ante orci, pellentesque eget, tempus quis, ultrices in, est. Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat. Sed etiam vestibulum velit, euismod lacinia quam nisl id lorem. Quisque erat.</p>
-							<a href="#" class="button">More Details</a>
+							<p>George Charles Design was founded by George Charles Horrobin who also founded Kijano Marketing. Self taught web develope, graphic designer and advertising guru.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
+							<p>We build your business into a brand. We take care of the legal side of things, create you a website, logo and social media channels. All you need to do is sit back and relax, knowing that you are in safe hands&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
 						</section>
 					</div>
 					<div class="3u">
 						<section class="sidebar">
 							<header>
-								<h2>Feugiat Tempus</h2>
+								<h2>OUR WORK</h2>
 							</header>
 							<ul class="style2">
 								<li>
@@ -144,32 +142,6 @@
 									<p>Donec leo, vivamus fermentum augue praesent a lacus at urna rutrum.</p>
 								</li>
 							</ul>						
-						</section>
-					</div>
-					<div class="3u">
-						<section class="sidebar">
-							<header>
-								<h2>Feugiat Tempus</h2>
-							</header>
-							<ul class="style1">
-								<li><a href="#">Maecenas luctus lectus at sapien</a></li>
-								<li><a href="#">Etiam rhoncus volutpat erat</a></li>
-								<li><a href="#">Donec dictum metus in sapien</a></li>
-								<li><a href="#">Nulla luctus eleifend purus</a></li>
-								<li><a href="#">Maecenas luctus lectus at sapien</a></li>
-							</ul>
-						</section>
-						<section class="sidebar">
-							<header>
-								<h2>Nulla luctus eleifend</h2>
-							</header>
-							<ul class="style1">
-								<li><a href="#">Maecenas luctus lectus at sapien</a></li>
-								<li><a href="#">Donec dictum metus in sapien</a></li>
-								<li><a href="#">Integer gravida nibh quis urna</a></li>
-								<li><a href="#">Etiam posuere augue sit amet nisl</a></li>
-								<li><a href="#">Mauris vulputate dolor sit amet nibh</a></li>
-							</ul>
 						</section>
 					</div>
 				</div>
