updated most images and main index.html file

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li class="active"><a href="index.html">Homepage</a></li>
-							<li><a href="left-sidebar.html">Left Sidebar</a></li>
-							<li><a href="right-sidebar.html">Right Sidebar</a></li>
-							<li><a href="no-sidebar.html">No Sidebar</a></li>
+							<li class="active"></li>
+							<li></li>
+							<li><a href="right-sidebar.html">CONTACT US</a></li>
+							<li><a href="no-sidebar.html">LEGAL JARGON</a></li>
 						</ul>
 					</nav>
 
@@ -61,14 +61,13 @@
 			<div id="marketing" class="container">
 				<div class="row">
 					<div class="3u">
-						<section>
+					  <section>
 							<header>
 								<h2>LEGAL ADVICE</h2>
 							</header>
 							<p class="subtitle">SAMPLE text</p>
-							<p><a href="#"><img src="images/pics13.jpg" alt=""></a></p>
-							<a href="#" class="button">More</a>
-						</section>
+						<p><a href="#"><img src="images/pics13.jpg" alt=""></a></p>
+</section>
 					</div>
 					<div class="3u">
 						<section>
@@ -77,8 +76,7 @@
 							</header>
 							<p class="subtitle">SAMPLE text</p>
 							<p><a href="#"><img src="images/pics14.jpg" alt=""></a></p>
-							<a href="#" class="button">More</a>
-						</section>
+</section>
 					</div>
 					<div class="3u">
 						<section>
@@ -87,8 +85,7 @@
 							</header>
 						  <p class="subtitle">SAMPLE text</p>
 <p><a href="#"><img src="images/pics15.jpg" alt=""></a></p>
-							<a href="#" class="button">More</a>
-						</section>
+</section>
 					</div>
 					<div class="3u">
 						<section>
@@ -97,8 +94,7 @@
 							</header>
 							<p class="subtitle">SAMPLE text</p>
 							<p><a href="#"><img src="images/pics16.jpg" alt=""></a></p>
-							<a href="#" class="button">More</a>
-						</section>
+</section>
 					</div>
 				</div>
 			</div>
@@ -125,19 +121,19 @@
 							<ul class="style2">
 								<li>
 									<a href="#"><img src="images/pics07.jpg" alt=""></a>
-									<p>Donec leo, vivamus fermentum augue praesent a lacus at urna rutrum.</p>
+									<p>This is sample work&nbsp;</p>
 								</li>
 								<li>
 									<a href="#"><img src="images/pics08.jpg" alt=""></a>
-									<p>Donec leo, vivamus fermentum augue praesent a lacus at urna rutrum.</p>
+									<p>This is sample work</p>
 								</li>
 								<li>
 									<a href="#"><img src="images/pics09.jpg" alt=""></a>
-									<p>Donec leo, vivamus fermentum augue praesent a lacus at urna rutrum.</p>
+									<p>This is sample work</p>
 								</li>
 								<li>
 									<a href="#"><img src="images/pics10.jpg" alt=""></a>
-									<p>Donec leo, vivamus fermentum augue praesent a lacus at urna rutrum.</p>
+									<p>This is sample work</p>
 								</li>
 							</ul>						
 						</section>
@@ -150,36 +146,12 @@
 	<!-- /Main -->
 
 	<!-- Featured -->
-		<div id="featured">
+	<div id="featured">
 			<div class="container">
 				<div class="row">
-					<section class="4u">
-						<div class="box">
-							<a href="#" class="image left"><img src="images/pics04.jpg" alt=""></a>
-							<h3>Etiam posuere augue</h3>
-							<p>Donec nonummy magna quis risus eleifend. </p>
-							<a href="#" class="button">More</a>
-						</div>
-					</section>
-					<section class="4u">
-						<div class="box">
-							<a href="#" class="image left"><img src="images/pics05.jpg" alt=""></a>
-							<h3>Etiam posuere augue</h3>
-							<p>Donec nonummy magna quis risus eleifend. </p>
-							<a href="#" class="button">More</a>
-						</div>
-					</section>
-					<section class="4u">
-						<div class="box">
-							<a href="#" class="image left"><img src="images/pics06.jpg" alt=""></a>
-							<h3>Etiam posuere augue</h3>
-							<p>Donec nonummy magna quis risus eleifend. </p>
-							<a href="#" class="button">More</a>
-						</div>
-					</section>
+					<section class="4u"> </section>
 				</div>
-				<div class="divider"></div>
-			</div>
+</div>
 		</div>
 	<!-- /Featured -->
 
@@ -189,9 +161,9 @@
 				<div class="row">
 					<div class="3u">
 						<section>
-							<h2>Maecenas lectus</h2>
+							<h2>TESTIMONIALS</h2>
 							<div class="balloon">
-								<blockquote>&ldquo;&nbsp;&nbsp;Donec leo, vivamus ullamcorper fermentum nibh in augue pulvinar ullamcorper metus praesent a lacus at urna congue ullamcorper  rutrum.&nbsp;&nbsp;&rdquo;<br>
+								<blockquote>Amazing work by George and his team.
 									<br>
 									<strong>&ndash;&nbsp;&nbsp;John Smith</strong></blockquote>
 							</div>
@@ -200,27 +172,27 @@
 					</div>
 					<div class="3u">
 						<section>
-							<h2>Donec dictum</h2>
+							<h2>Affiliate links&nbsp;</h2>
 							<ul class="default">
 								<li>
-									<h3>Mauris vulputate dolor sit amet</h3>
-									<p><a href="#">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</a></p>
+									<h3>These are companies weare in partneship with.&nbsp;</h3>
+									<p><a href="#">Sponsoships&nbsp;&nbsp;</a></p>
 								</li>
 								<li>
-									<h3>Fusce ultrices fringilla metus</h3>
-									<p><a href="#">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</a></p>
+									<h3>Sample brand&nbsp;</h3>
+									<p><a href="#">Sponsorship</a></p>
 								</li>
 								<li>
-									<h3>Donec dictum metus in sapien</h3>
-									<p><a href="#">Donec leo, vivamus fermentum nibh in augue praesent a lacus at urna congue rutrum.</a></p>
+									<h3>Sample brand</h3>
+									<p><a href="#">Sponsorship</a></p>
 								</li>
 							</ul>
 						</section>
 					</div>
 					<div class="3u">
 						<section>
-							<h2>Nulla leifend</h2>
-							<p>Donec placerat odio vel elit. Nullam ante orci, pellentesque eget, tempus quis, ultrices in, est. Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat.</p>
+							<h2>INSTAGRAM</h2>
+							<p>We are actively posting on instagram, have a look at our latest posts below&nbsp;</p>
 							<ul class="style5">
 								<li><a href="#"><img src="images/pics07.jpg" alt=""></a></li>
 								<li><a href="#"><img src="images/pics08.jpg" alt=""></a></li>
@@ -229,17 +201,16 @@
 								<li><a href="#"><img src="images/pics11.jpg" alt=""></a></li>
 								<li><a href="#"><img src="images/pics12.jpg" alt=""></a></li>
 							</ul>
-							<a href="#" class="button">More Collections</a>
+							<a href="#" class="button">OPEN INSTAGRAM</a>
 						</section>
 					</div>
 					<div class="3u">
 						<section>
-							<h2>Luctus eleifend</h2>
-							<p><strong>Aliquam erat volutpat. Pellentesque tristique ante ut risus. </strong></p>
-							<p>Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum congue, nibh. Suspendisse dictum porta lectus. Donec placerat odio vel elit.</p>
-							<p>Donec placerat odio vel elit. Nullam ante orci, pellentesque eget, tempus quis, ultrices in, est. Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat.</p>
-							<a href="#" class="button">More Collections</a>
-						</section>
+							<h2>SOCIAL NETWORKS</h2>
+							<p><strong>Below are links to all of our social networking channels&nbsp; </strong></p>
+							<p>LINK 1</p>
+							<p>LINK 2</p>
+</section>
 					</div>
 				</div>
 			</div>
@@ -248,7 +219,7 @@
 
 	<!-- Copyright -->
 		<div id="copyright" class="container">
-			Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
+			Design: <a href="http://templated.co">GEORGE CHARLES DESIGN</a> Images: <a href="http://unsplash.com">Royalty free images</a>
 		</div>
 
 
