updated different html pages.

--- a/contact.html
+++ b/contact.html
@@ -47,12 +47,7 @@
 		</div>
 	<!-- Header -->
 		
-	<!-- Banner -->
-		<div id="banner">
-			<div class="container">
-			</div>
-		</div>
-	<!-- /Banner -->
+	<!-- Banner -->	<!-- /Banner -->
 
 	<!-- Main -->
 		<div id="page">
